turtleart.circleying.CircleYing.scala.error
Compilation error:
CircleYing:3: error: value foreach is not a member of Range.Partial[Double,scala.collection.immutable.NumericRange[Double]]
    for(j<-(0.001) to 40){
                   ^